--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -45,6 +45,7 @@
             {% if session['access_level'] == 0 %}
             <li><a href="/statistics/section_stats" id="section_stats">Statistika sekcijskih dežurstava</a></li>
             {% endif %}
+            <li><a href="https://github.com/mlaggi0/VolonterskiSati/blob/master/README.md">FAQ</a></li>
             {% endif %}
         </ul>
 
