--- a/templates/statistics/interval.html
+++ b/templates/statistics/interval.html
@@ -30,9 +30,9 @@
         </thead>
         {% for section_name in sections %}
             <tr>
-                <td colspan="3" align="middle" bgcolor="#ab7200">SEKCIJA: {{section_name}}</td>
-                <td>{{section_hours[section_name]['total_hours']}}</td>
-                <td>{{section_hours[section_name]['total_hours_w']}}</td>
+                <td colspan="3" align="middle" bgcolor="#94908e">SEKCIJA: {{section_name}}</td>
+                <td bgcolor="#94908e">{{section_hours[section_name]['total_hours']}}</td>
+                <td bgcolor="#94908e">{{section_hours[section_name]['total_hours_w']}}</td>
             </tr>
         {% for k, v in members_list[section_name].items() %}
             <tr class='clickable-row' data-href="{{ url_for('statistics.member_statistics', member_id = k )}}">
