--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -29,6 +29,12 @@
         <input type="password" class="form-control" id="password" placeholder="Enter password" name="password" required>
       </div>
     </div>
+      <div class="form-group">
+      <label class="control-label col-sm-2" for="invite-code">Invite code:</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="invite-code" placeholder="Enter invite code" name="invite_code" required>
+      </div>
+    </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="section">Sekcija:</label>
       <div class="col-sm-10">
