--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -32,7 +32,7 @@
       <div class="form-group">
       <label class="control-label col-sm-2" for="invite-code">Invite code:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="invite-code" placeholder="Enter invite code" name="invite_code" required>
+        <input type="password" class="form-control" id="invite-code" placeholder="Enter invite code" name="invite_code" required>
       </div>
     </div>
     <div class="form-group">
