--- a/templates/activities/list.html
+++ b/templates/activities/list.html
@@ -72,6 +72,7 @@ function remove(e, activity_id)
         })};
 }
 </script>
+{{ pagination.info }}
 <table class="table table-striped table-bordered table-hover">
         <thead>
         <tr>
@@ -105,7 +106,7 @@ function remove(e, activity_id)
             </tr>
         {% endfor %}
     </table>
-
+{{ pagination.links }}
 <script>
     jQuery(document).ready(function($) {
     $(".clickable-row").click(function() {
