--- a/templates/activities/list_types.html
+++ b/templates/activities/list_types.html
@@ -18,19 +18,21 @@
   </style>
 </head>
 <body>
-
+{{ pagination.info }}
 <table class="table table-striped table-bordered table-hover">
         <thead>
         <tr>
             <th>Naziv</th>
             <th>Opis</th>
-            {% if session['access_level'] == 0 %}
             <th>Sekcija</th>
-            {% endif %}
         </tr>
         </thead>
         {% for k, v in list_records.items() %}
-            <tr class='clickable-row' data-href="{{ url_for('activities.edit_activity_type', type_id = k )}}">
+            {% if session['access_level'] > 0 and v[2] == 'svi' %}
+                <tr>
+            {% else %}
+                <tr class='clickable-row' data-href="{{ url_for('activities.edit_activity_type', type_id = k )}}">
+            {% endif %}
                 {% for value in v %}
                     <td>
                         {{ value }}
@@ -40,7 +42,7 @@
             </tr>
         {% endfor %}
     </table>
-
+{{ pagination.links }}
 <script>
     jQuery(document).ready(function($) {
     $(".clickable-row").click(function() {
