--- a/templates/members/add.html
+++ b/templates/members/add.html
@@ -58,7 +58,7 @@
       <div class="form-group">
       <label class="control-label col-sm-2" for="idcard">Broj članske iskaznice:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="idcard" placeholder="Upiši broj članske iskaznice" name="idcard" required>
+        <input type="text" class="form-control" id="idcard" placeholder="Upiši broj članske iskaznice" name="idcard">
       </div>
     </div>
       <div class="form-group">
