--- a/templates/members/list.html
+++ b/templates/members/list.html
@@ -32,12 +32,15 @@
             <th>Datum učlanjenja</th>
             <th>Broj iskaznice</th>
             <th>Email</th>
+            <th>Fakultet</th>
+            <th>Adresa</th>
+            <th>Veličina majice</th>
             <th>Matična sekcija</th>
             <th>Boja iskaznice</th>
         </tr>
         </thead>
         {% for k, v in list_records.items() %}
-            {% if session['access_level'] == 0 or (session['access_level'] == 1 and session['section'] == v[9]) %}
+            {% if session['access_level'] == 0 or (session['access_level'] == 1 and session['section'].capitalize() == v[12]) %}
                 <tr class='clickable-row' data-href="{{ url_for('members.edit_member', member_id = k )}}">
             {% else %}
                 <tr>
